# holding_quiz

./: README.md  fetch_questions.py  keyboard.py  main.py  pyproject.toml  requirements.txt  tele_bot.py  tg_bot.py  vk_bot.py
