[tool.poetry]
name = "holding-quiz"
version = "0.1.0"
description = ""
authors = ["Vladuslav Dragushin <maxhc@inbox.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "holding_quiz"}]

[tool.poetry.dependencies]
python = "^3.10"
vk-api = "11.9.9"
environs = "^9.5.0"
redis = "4.5.1"
python-telegram-bot = "13.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
